<?xml version="1.0"?>
<package>
    <name>gadgets</name>
    <version>0.0.1</version>
    <description>The gadgets package contains small utilities to help develop and maintain the Capstone Project.</description>
    <license>GPLv3</license>

    <author email="mail@xperroni.me">Helio Perroni Filho</author>
    <maintainer email="mail@xperroni.me">Helio Perroni Filho</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>styx_msgs</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>styx_msgs</run_depend>
</package>
